--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up Kubernetes
-        uses: azure/setup-k8s@v1
+        uses: azure/setup-k8s@latest_version
         with:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           enable_experimental: true
