--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set Up Kubernetes
-        uses: azure/setup-k8s@latest_version
-        with:
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
-          enable_experimental: true
+        run: |
+          echo "$KUBE_CONFIG" > kubeconfig.yaml
+          kubectl config set-context my-context --cluster=my-cluster --user=my-user
+          kubectl config use-context my-context
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 
       - name: Deploy to Kubernetes
         run: kubectl apply -f deployment.yaml service.yaml
