--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 
       - name: Deploy to Kubernetes
-        run: kubectl apply -f deployment.yaml,service.yaml --validate=false
+        run: kubectl apply -f deployment.yaml -f service.yaml
